<resources>
    <string name="app_name" translatable="false">PokéInfo</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log In</string>
    <string name="menu_register">Register</string>
    <string name="menu_teams" translatable="false">Pokemon Teams</string>
    <string name="menu_home" translatable="false">Pokemon Details</string>
    <string name="menu_home_detail" translatable="false">Details</string>
    <string name="menu_attacks">Attacks</string>
    <string name="menu_abilities">Abilities</string>
    <string name="settings_header_language">Language Settings</string>
    <string name="settings_header_account_setting">Account Settings</string>
    <string name="change_language_title">Change Language</string>
    <string name="delete_account">Delete your Account</string>
    <string name="bottom_sheet_multiplicator">Multiplicator</string>
    <string name="base_value_name_hp_short" translatable="false">HP</string>
    <string name="base_value_name_atk_short" translatable="false">Atk</string>
    <string name="base_value_name_def_short" translatable="false">Def</string>
    <string name="base_value_name_spAtk_short" translatable="false">SpA</string>
    <string name="base_value_name_spDef_short" translatable="false">SpD</string>
    <string name="base_value_name_init_short" translatable="false">Init</string>
    <string name="base_values">Base values</string>
    <string name="accuracy_placeholder">Acc. %1$s</string>
    <string name="cv_title_basic_infos">Basic Informations</string>
    <string name="basic_base_happiness">Base Happiness</string>
    <string name="basic_catchrate">Catchrate</string>
    <string name="basic_height">Height</string>
    <string name="basic_gender">Gender</string>
    <string name="basic_weight">Weight</string>
    <string name="alternative_pictures">Alternative pictures</string>
    <string name="default_image_path" translatable="false">/data/user/0/com.example.pokinfo/files/pokemon_</string>
    <string name="basic_pp">PP</string>
    <string name="buttonPokemonWithAttacks">Show Pokemon with this attack</string>
    <string name="description">Description</string>
    <string name="basic_attacks_searchtext_attack">Enter the attack name</string>
    <string name="formatted_number">#%1$s</string>
    <string name="m" translatable="false">%sm</string>
    <string name="kg" translatable="false">%s kg</string>
    <string name="basic_stat_values_short" translatable="false">Stats</string>
    <string name="basic_stat_values">Status values</string>
    <string name="pokedex_info">Pokedex Entry</string>
    <string name="height_placeholder">%f metres</string>
    <string name="weight_placeholder">%d kilogram</string>
    <string name="generation_nr_placeholder" translatable="false">Gen. %d</string>
    <string name="abilities">Abilities</string>
    <string name="attacks">Attacks</string>
    <string name="attack">Attack</string>
    <string name="basic_accuracy">Accuracy</string>
    <string name="basic_accuracy_short">Acc.</string>
    <string name="basic_category">Category</string>
    <string name="basic_category_short">Cat.</string>
    <string name="basic_power">Str.</string>
    <string name="basic_type">Type</string>
    <string name="common_nr_indicator" translatable="false">%1$s/%2$s</string>
    <string name="common_percent_placeholder" translatable="false">%1$s%%</string>
    <string name="level_short" translatable="false">Lv.</string>
    <string name="level" translatable="false">Level</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="pokedex_info_title">Pokedex Entries</string>
    <string name="evolution_header">%s\'s Evolutions</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="registerText">Not registered yet? Click here</string>
    <string name="isRegisteredText">You have an account? Click here for login</string>
    <string name="loginGoogle" translatable="false">Login with Google</string>
    <string name="registerGoogle">Register with Google</string>
    <string name="loginApple" translatable="false">Login with Apple</string>
    <string name="logout">Logout</string>
    <string name="or_text">OR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="enter_ability_name">Choose the Ability</string>
    <string name="seems_like_you_have_no_saved_teams_want_to_create_one">Seems like you have no saved Teams, want to create one?</string>
    <string name="no_shared_teams">There are no teams other people shared with you…</string>
    <string name="no_public_teams">There are no public teams right now, you might publish one yourself</string>
    <string name="basic_pokemon" translatable="false">Pokemon</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_pokemon_1_6">Choose your Pokemon</string>
    <string name="chosen_pokemon_nr_1">chosen Pokemon Nr 1</string>
    <string name="remove_chosen_pokemon_nr_1">remove chosen pokemon nr 1</string>
    <string name="add">Add</string>
    <string name="choose_your_attacks">Choose your Attacks</string>
    <string name="choose_language">Choose the Language</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="choose_your_attacks_selected">%d selected</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_100" translatable="false">100</string>
    <string name="ev_s" translatable="false">EV\'s</string>
    <string name="iv_s" translatable="false">IV\'s</string>
    <string name="remaining_ev_s_508">Remaining Ev\'s : %d</string>
    <string name="empty_slot_1" translatable="false">Slot 1</string>
    <string name="empty_slot_2" translatable="false">Slot 2</string>
    <string name="empty_slot_3" translatable="false">Slot 3</string>
    <string name="empty_slot_6" translatable="false">Slot 6</string>
    <string name="empty_slot_5" translatable="false">Slot 5</string>
    <string name="empty_slot_4" translatable="false">Slot 4</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="confirmation_change_team">Do you really want to edit this team?</string>
    <string name="popup_enter_team_name">Enter the Name of your Team</string>
    <string name="create_team_fragment_label">Create your Team</string>
    <string name="show_attacks_placeholder">%s\'s Attacks</string>
    <string name="sort">Sort by</string>
    <string name="enter_pokemon_name">Enter the name of the pokemon</string>
    <string name="enter_name_error">You need to enter a name</string>
    <string name="need_new_name_error">Enter a new team name.</string>
    <string name="failed_to_load_abilities">There was an error while fetching abilities list data… Try again or report this as a bug</string>
    <string name="failed_to_load_attacks">There was an error while fetching attack data… Try again or report this as a bug</string>
    <string name="failed_load_single_pokemon_data">Oops… something went wrong while loading the pokemon data</string>
    <string name="button_to_change_language">Button to change Language</string>
    <string name="indicate_if_special_physical_or_status_attack">Imageview to indicate if Special Physical or Status Attack</string>
    <string name="show_pokemon_attacks">Show Pokemon Attacks</string>
    <string name="go_the_the_next_picture">Go to the Next Picture</string>
    <string name="go_to_the_previous_picture">Go to the previous Picture</string>
    <string name="the_elemental_type_icon_of_the_pokemon_type">The elemental Type Icon of the Pokemontype</string>
    <string name="creata_a_new_pokemon_team">Creata a new Pokemon Team</string>
    <string name="username" translatable="false">Username</string>
    <string name="or">OR</string>
    <string name="main_picture_of_a_pokemon">Main Picture of a Pokemon</string>
    <string name="save_team">Save Team</string>
    <string name="open_the_filter_menu">Open the filter Menu</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="delete">Delete</string>
    <string name="remove_access">Remove access</string>
    <string name="share_this_team">Share this Team</string>
    <string name="share_team">Share Team</string>
    <string name="share_success">Shared your team successfully</string>
    <string name="edit">Edit</string>
    <string name="evs_and_ivs_initial">Evs and Ivs ( 508 left) </string>
    <string name="evs_and_ivs">Evs and Ivs ( %d left )</string>
    <string name="expand_the_ev_iv_bar">Expand the EV/IV Bar</string>
    <string name="expand_the_item">Expand the Item</string>
    <string name="image_of_the_pokemon">Image of the Pokemon</string>
    <string name="max_number_of_teams_reched">You can only have 6 Pokemon in your Team!</string>
    <string name="error_while_adding_pokemon">An Error happened while adding Pokemon to Team</string>
    <string name="you_need_at_least_1_attack">You need to add at least one Attack to your Pokemon!</string>
    <string name="you_need_to_select_1_pokemon">You need to select a Pokemon first</string>
    <string name="failed_to_insert_team">Failed to insert Team into Firebase… try again or report</string>
    <string name="failed_to_update_team">Failed to update team in Firebase… try again or report</string>
    <string name="successfully_saved_team">Successfully saved your Team</string>
    <string name="need_to_save_first_pokemon">You need to save at least 1 pokemon on the bottom Button</string>
    <string name="sucessfully_saved_pokemon">Saved Pokemon!</string>
    <string name="delete_team_confirmation">Do you really want to delete this Team?</string>
    <string name="delete_team_info">Users you shared your team with cannot access it anymore…</string>
    <string name="remove_access_confirmation">Do you really want to remove your access to %s\'s Team?</string>
    <string name="copy_team_confirmation">Do you want to make a own copy of that Team?</string>
    <string name="remove_access_text">This action cannot be undone. The owner of the team must give you access again. </string>
    <string name="delete_pokemon_title">Delete %s </string>
    <string name="delete_pokemon_confirmation">Are you sure you want to remove %s from your Team?</string>
    <string name="team_deleted">Team successfully deleted</string>
    <string name="team_deleted_error">An error occurred while deleting the team</string>
    <string name="save_and_go_to_next_slot">Save and go to next Slot</string>
    <string name="lv" translatable="false">Lv.</string>
    <string name="add_attacks_to_your_pokemon">Add Attacks to your Pokemon</string>
    <string name="gender_neutral" translatable="false">Neutral</string>
    <string name="nature_amp_ev_s" translatable="false"><![CDATA[Nature & EV\'s]]></string>
    <string name="choose_your_language">Choose a language</string>
    <string name="change_profile_pic">Do you want to change your Profile Picture?</string>
    <string name="publish">Publish</string>
    <string name="user_details">User details</string>
    <string name="number_of_created_teams">Number of created teams:</string>
    <string name="received_likes">Received likes:</string>
    <string name="registered_since">Registered since %s</string>
    <string name="public_teams_from_user">Public Teams from %s</string>
    <string name="user_profile_image">User Profile Image</string>
</resources>