<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header_language">

        <MultiSelectListPreference
            app:key="signature"
            app:title="@string/change_language_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_header_account_setting">


        <ListPreference
            app:icon="@drawable/ic_delete_24"
            app:key="sync"
            app:title="@string/delete_account" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment" />

    </PreferenceCategory>

</PreferenceScreen>