<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:divider="?attr/dividerHorizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:showDividers="middle">

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:drawablePadding="10dp"
        app:drawableTint="?attr/colorOnBackground"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/edit"
        app:drawableStartCompat="@drawable/baseline_edit_24" />

    <TextView
        android:id="@+id/deleteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/delete"
        android:textColor="?attr/actionModeSplitBackground"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_delete_24" />

    <TextView
        android:id="@+id/shareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:drawablePadding="10dp"
        app:drawableTint="?attr/colorOnBackground"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/share_this_team"
        app:drawableStartCompat="@drawable/baseline_share_24" />
</LinearLayout>